body alignment fix

--- a/index_style.css
+++ b/index_style.css
@@ -4,6 +4,8 @@ html {
 
 body { 
 	margin-top: 0%;
+	margin-left: 25%;
+	margin-right: 25%;
 	width: 50%;
 	text-align: center;
 	font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
